// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Swiper /> should render a customIndicator 1`] = `
RenderContext {
  "0": VNode {
    "attributes": Object {
      "customIndicator": VNode {
        "attributes": undefined,
        "children": Array [
          "2/4",
        ],
        "key": undefined,
        "nodeName": "div",
      },
      "duration": 200,
      "initialIndex": 3,
      "intervel": 500,
      "onChange": [MockFunction] {
        "calls": Array [
          Array [
            3,
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
      "slideWidth": 280,
    },
    "children": Array [
      VNode {
        "attributes": Object {
          "key": 0,
        },
        "children": Array [
          1,
        ],
        "key": 0,
        "nodeName": [Function],
      },
      VNode {
        "attributes": Object {
          "key": 1,
        },
        "children": Array [
          2,
        ],
        "key": 1,
        "nodeName": [Function],
      },
      VNode {
        "attributes": Object {
          "key": 2,
        },
        "children": Array [
          3,
        ],
        "key": 2,
        "nodeName": [Function],
      },
      VNode {
        "attributes": Object {
          "key": 3,
        },
        "children": Array [
          4,
        ],
        "key": 3,
        "nodeName": [Function],
      },
    ],
    "key": undefined,
    "nodeName": [Function],
  },
  "length": 1,
}
`;

exports[`<Swiper /> should render nothing 1`] = `
RenderContext {
  "0": VNode {
    "attributes": Object {
      "initialIndex": 0,
    },
    "children": Array [],
    "key": undefined,
    "nodeName": [Function],
  },
  "length": 1,
}
`;

exports[`<Swiper /> should render porperly 1`] = `
RenderContext {
  "0": VNode {
    "attributes": Object {
      "autoplay": true,
      "initialIndex": 0,
      "showIndicators": true,
    },
    "children": Array [
      VNode {
        "attributes": Object {
          "key": 0,
        },
        "children": Array [
          1,
        ],
        "key": 0,
        "nodeName": [Function],
      },
      VNode {
        "attributes": Object {
          "key": 1,
        },
        "children": Array [
          2,
        ],
        "key": 1,
        "nodeName": [Function],
      },
      VNode {
        "attributes": Object {
          "key": 2,
        },
        "children": Array [
          3,
        ],
        "key": 2,
        "nodeName": [Function],
      },
      VNode {
        "attributes": Object {
          "key": 3,
        },
        "children": Array [
          4,
        ],
        "key": 3,
        "nodeName": [Function],
      },
    ],
    "key": undefined,
    "nodeName": [Function],
  },
  "length": 1,
}
`;
